# bankos-platform

./: .gitignore  Justfile  README.md
.github/workflows/: account-service.yml  api-gateway.yml  notification-service.yml  reporting-service.yml  transaction-service.yml
account-service/account-service/: build.gradle.kts
api-gateway/api-gateway/: build.gradle.kts
docs/: DEV_SETUP.md  bankos-c4-diagrams.jsx
docs/adr/: ADR-001.md  ADR-003.md  ADR-004.md  ADR-005.md  ADR-006.md  ADR-007.md  ADR-016.md  ADR-017.md
infra/: docker-compose.yml
infra/helm/bankos-platform/: Chart.yaml  values.yaml
infra/keycloak/realms/: bankos-realm.json
infra/kubernetes/base/: api-gateway.yaml  (+7 more)
infra/scripts/: bootstrap-secrets.sh  deploy.sh  dev-setup.sh
notification-service/notification-service/: build.gradle.kts
reporting-service/: Cargo.toml
reporting-service/reporting-service/: Cargo.toml
reporting-service/reporting-service/config/: default.toml
reporting-service/reporting-service/src/application/: ports.rs  report_service.rs
reporting-service/reporting-service/src/domain/: aggregation.rs  aggregation_tests.rs  error.rs  model.rs
reporting-service/reporting-service/src/infrastructure/: mod.rs
reporting-service/reporting-service/src/infrastructure/http/: mod.rs
reporting-service/reporting-service/src/infrastructure/kafka/: mod.rs
reporting-service/reporting-service/src/infrastructure/persistence/: in_memory.rs  mod.rs
reporting-service/reporting-service/tests/: report_service_tests.rs  sqlite_tests.rs
reporting-service/src/: lib.rs
reporting-service/src/application/: mod.rs  ports.rs  report_service.rs
reporting-service/src/domain/: aggregation.rs  aggregation_tests.rs  mod.rs  model.rs
reporting-service/src/infrastructure/http/: mod.rs
reporting-service/src/infrastructure/kafka/: mod.rs
reporting-service/src/infrastructure/persistence/: in_memory.rs  mod.rs
reporting-service/tests/: aggregation_tests.rs  report_service_tests.rs  sqlite_tests.rs
transaction-service/transaction-service/: build.gradle.kts
(+95 files in other folders)
